<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_date_of_birth">Date of birth</string>
    <string name="account_end_text">Your physical information is used for personalization and accuracy</string>
    <string name="account_first_name">First name</string>
    <string name="account_height">Height</string>
    <string name="account_last_name">Last name</string>
    <string name="account_maximum_heart_rate">Maximum heart rate</string>
    <string name="account_profile_public_info"><b>Profile</b> (this info is public)</string>
    <string name="device_registration_device_language">Device language</string>
    <string name="eula">EULA</string>
    <string name="feed_option_show_activity">All activities</string>
    <string name="feed_option_show_all">All</string>
    <string name="feed_option_show_followed_activity">"Others' activities"</string>
    <string name="feed_option_show_followed_training">"Others' training"</string>
    <string name="feed_option_show_own_activity">Your activities</string>
    <string name="feed_option_show_own_training">Your training</string>
    <string name="feed_option_show_training">All training</string>
    <string name="glyph_sound_off"></string>
    <string name="glyph_sound_on"></string>
    <string name="google_calendar_header">Add to Google Calendar</string>
    <string name="google_calendar_info_text">This will create training results and training target calendars to your Google Calendar. If wanted, these can also be shown in your other calendar apps</string>
    <string name="google_calendar_training_session_targets_name">Polar training targets</string>
    <string name="google_calendar_training_sessions_name">Polar training results</string>
    <string name="google_fit_connect_popup_info_text">Google Fit is an open platform that lets you control your fitness data from multiple apps and devices.</string>
    <string name="google_fit_header">Google Fit</string>
    <string name="my_fitness_pal_header">MyFitnessPal</string>
    <string name="nike_plus_header">Nike+ Run Club</string>
    <string name="settings_connect_header">Connect</string>
    <string name="settings_device_id">Device ID: %1$s</string>
    <string name="settings_firmware_version">Firmware version:</string>
    <string name="settings_first_day_of_week">First day of week</string>
    <string name="settings_handedness">I wear my product on</string>
    <string name="settings_how_to_sync">How to sync?</string>
    <string name="settings_keep_local_data_title">Keep data in local memory for</string>
    <string name="settings_left_wrist">Left wrist</string>
    <string name="settings_product_support">Flow app support</string>
    <string name="settings_support_show_licenses">Show licenses</string>
    <string name="settings_units">Units</string>
    <string name="settings_units_and_format">Preferences</string>
    <string name="sport_profile_edit_auto_lap_sub_title">Take a lap after</string>
    <string name="sport_profile_edit_auto_lap_title">Automatic lap</string>
    <string name="sport_profile_edit_basics_title">Basics</string>
    <string name="sport_profile_edit_info_additional_marathon_world_record">"Add some fun into your training with these alternative training views. With the World record comparison you'll be able to see how close to the world record speed you can get, and what it takes to run at that speed. Your training device let's you know when you've hit the world record speed."</string>
    <string name="sport_profile_edit_info_additional_views_cooper_distance_estimate">"The Cooper test result let's you know what test results you would get if you ran the test at your current pace. Cooper test results vary from 1000+, 2000+, 3000+ up to 4000+ meters. This display gives you an idea of the effort it takes to run the top results of 3000m or 4000m."</string>
    <string name="sport_profile_edit_info_automatic_lap">"Automatic lap is taken automatically each time you cross the set duration or distance interval. 

Location-based automatic lap is taken every time you arrive at the point where you started the session."</string>
    <string name="sport_profile_edit_training_reminder_message_hint">Add message</string>
    <string name="sport_profile_edit_training_reminder_message_sub_title">Remind me with this message:</string>
    <string name="sport_profile_edit_training_reminder_sub_title">Remind me after</string>
    <string name="sport_profile_edit_training_reminder_title">Training reminder</string>
    <string name="sport_profile_edit_training_sounds_title">Training sounds</string>
    <string name="sport_profiles_additional_views_altitude_graph">Altitude</string>
    <string name="sport_profiles_additional_views_altitude_graph_info_text">Choose this if you want to see an altitude graph together with altitude related figures as one of your training views.</string>
    <string name="sport_profiles_additional_views_back_to_start">Back to start</string>
    <string name="sport_profiles_additional_views_back_to_start_info_text">Choose this if you want your device to guide you back to your original starting point. You will see location guide as one of your training views.</string>
    <string name="sport_profiles_additional_views_countdown_timer">Countdown timer</string>
    <string name="sport_profiles_additional_views_countdown_timer_info_text">Choose this if you want to use the countdown timer during your sessions. To use the timer, you need find it among your training displays and set it with your watch.</string>
    <string name="sport_profiles_additional_views_hr_graph">Heart rate</string>
    <string name="sport_profiles_additional_views_hr_graph_info_text">Choose this if you want to see a heart rate graph together with your current, average and maximum heart rate as one of your training views.</string>
    <string name="sport_profiles_additional_views_interval_timer">Interval timer</string>
    <string name="sport_profiles_additional_views_interval_timer_info_text">Choose this if you want to use the interval timer during your sessions. To use the timer, you need find it among your training displays and set it with your watch.</string>
    <string name="sport_profiles_additional_views_pace_graph">Pace</string>
    <string name="sport_profiles_additional_views_pace_graph_info_text">Choose this if you want to see a pace graph together with your current, average and maximum pace as one of your training views.</string>
    <string name="sport_profiles_additional_views_pedalling_force">Force</string>
    <string name="sport_profiles_additional_views_pedalling_force_info_text">Choose this if you want to see pedaling force related data as one of your training views.</string>
    <string name="sport_profiles_additional_views_power_graph">Power</string>
    <string name="sport_profiles_additional_views_power_graph_info_text">Choose this if you want to see a power graph together with your current, average and maximum power as one of your training views.</string>
    <string name="sport_profiles_additional_views_running_cadence_graph">Cadence</string>
    <string name="sport_profiles_additional_views_running_cadence_graph_info_text">Choose this if you want to see a cadence graph together with your current, average and maximum cadence as one of your training views.</string>
    <string name="sport_profiles_additional_views_stopwatch_autolap">Automatic lap times</string>
    <string name="sport_profiles_additional_views_stopwatch_autolap_info_text">Choose this if you want to see automatic lap times as one of your training views. You can choose either time, distance or location based automatic laps for each sport profile.</string>
    <string name="sport_profiles_additional_views_stopwatch_lap">Lap times</string>
    <string name="sport_profiles_additional_views_stopwatch_lap_info_text">Choose this if you want to see lap times as one of your training views.</string>
    <string name="sport_profiles_additional_views_swimming_drills">Swimming drills</string>
    <string name="sport_profiles_additional_views_swimming_drills_info_text">Choose this if swimming drills are part of your training and you want to see drill data as one of your training views.</string>
    <string name="sport_profiles_additional_views_time_in_hr_zone_info_text">"Choose this if you want to see the percentages of time you've spent in each heart rate zone as one of your training views."</string>
    <string name="sport_profiles_additional_views_time_in_hr_zones">Time in HR zones</string>
    <string name="sport_profiles_additional_views_time_in_power_zone_info_text">"Choose this if you want to see the percentages of time you've spent in each power zone as one of your training views."</string>
    <string name="sport_profiles_additional_views_time_in_power_zones">Time in power zones</string>
    <string name="sport_profiles_additional_views_time_in_speed_zone_info_text">"Choose this if you want to see the percentages of time you've spent in each speed zone as one of your training views."</string>
    <string name="sport_profiles_additional_views_time_in_speed_zones">Time in speed zones</string>
    <string name="sport_profiles_additional_views_watch_face">Time of day</string>
    <string name="sport_profiles_additional_views_watch_face_info_text">Choose this if you want to see time of day as one of your training views.</string>
    <string name="start_using_new_product">Get started with new device</string>
    <string name="strava_header">Strava</string>
    <string name="training_display_item_cooper_distance_estimate">Cooper test</string>
    <string name="training_display_item_difference_to_marathon_wr">World record comparison</string>
    <string name="training_peaks_header">TrainingPeaks</string>
</resources>