<?xml version="1.0" encoding="utf-8"?>
<merge android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_back_to_start_switch" app:header="@string/sport_profiles_additional_views_back_to_start" app:infoText="@string/sport_profiles_additional_views_back_to_start_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_watch_face_switch" app:header="@string/sport_profiles_additional_views_watch_face" app:infoText="@string/sport_profiles_additional_views_watch_face_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_timing_laps_switch" app:header="@string/sport_profiles_additional_views_stopwatch_lap" app:infoText="@string/sport_profiles_additional_views_stopwatch_lap_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_timing_auto_laps_switch" app:header="@string/sport_profiles_additional_views_stopwatch_autolap" app:infoText="@string/sport_profiles_additional_views_stopwatch_autolap_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_hr_graph_switch" app:header="@string/sport_profiles_additional_views_hr_graph" app:infoText="@string/sport_profiles_additional_views_hr_graph_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_speed_pace_graph_switch" app:header="@string/sport_profiles_additional_views_pace_graph" app:infoText="@string/sport_profiles_additional_views_pace_graph_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_altitude_graph_switch" app:header="@string/sport_profiles_additional_views_altitude_graph" app:infoText="@string/sport_profiles_additional_views_altitude_graph_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_cadence_graph_switch" app:header="@string/sport_profiles_additional_views_running_cadence_graph" app:infoText="@string/sport_profiles_additional_views_running_cadence_graph_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_power_graph_switch" app:header="@string/sport_profiles_additional_views_power_graph" app:infoText="@string/sport_profiles_additional_views_power_graph_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_countdown_timer_switch" app:header="@string/sport_profiles_additional_views_countdown_timer" app:infoText="@string/sport_profiles_additional_views_countdown_timer_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_interval_timer_switch" app:header="@string/sport_profiles_additional_views_interval_timer" app:infoText="@string/sport_profiles_additional_views_interval_timer_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_hr_switch" app:header="@string/sport_profiles_additional_views_time_in_hr_zones" app:infoText="@string/sport_profiles_additional_views_time_in_hr_zone_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_speed_switch" app:header="@string/sport_profiles_additional_views_time_in_speed_zones" app:infoText="@string/sport_profiles_additional_views_time_in_speed_zone_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_power_switch" app:header="@string/sport_profiles_additional_views_time_in_power_zones" app:infoText="@string/sport_profiles_additional_views_time_in_power_zone_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_force_graph_switch" app:header="@string/sport_profiles_additional_views_pedalling_force" app:infoText="@string/sport_profiles_additional_views_pedalling_force_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_swimming_drills_switch" app:header="@string/sport_profiles_additional_views_swimming_drills" app:infoText="@string/sport_profiles_additional_views_swimming_drills_info_text" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_cooper_estimate_switch" app:header="@string/training_display_item_cooper_distance_estimate" app:infoText="@string/sport_profile_edit_info_additional_views_cooper_distance_estimate" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/sport_profile_edit_training_displays_marathon_switch" app:header="@string/training_display_item_difference_to_marathon_wr" app:infoText="@string/sport_profile_edit_info_additional_marathon_world_record" app:onCheckedChangedView="onAdditionalDisplaySwitchCheckedChanged" app:showBottomDivider="false" style="@style/SportProfileEditSwitch" />
</merge>