<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/basics_view_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sport_profile_edit_basics_title" style="@style/SportProfileEditHeader" />
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/basics_automatic_lap_switch" app:header="@string/sport_profile_edit_auto_lap_title" app:infoText="@string/sport_profile_edit_info_automatic_lap" app:onCheckedChangedView="onAutoLapSwitchCheckedChanged" style="@style/SportProfileEditSwitch">
        <TextView android:id="@id/basics_view_auto_lap_sub_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sport_profile_edit_auto_lap_sub_title" style="@style/SportProfileEditSubHeader" />
        <TextView android:id="@id/basics_view_edit_auto_lap_value" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/SportProfileEditTextEdit" />
        <fi.polar.polarflow.view.SegmentedSelector android:id="@id/basics_auto_lap_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sport_profile_edit_padding" android:layout_marginRight="@dimen/sport_profile_edit_padding" android:layout_marginBottom="@dimen/sport_profile_edit_padding_medium" />
    </fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout>
    <fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout android:id="@id/basics_training_reminder_switch" app:header="@string/sport_profile_edit_training_reminder_title" app:onCheckedChangedView="onReminderSwitchCheckedChanged" style="@style/SportProfileEditSwitch">
        <TextView android:id="@id/basics_view_training_reminder_sub_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sport_profile_edit_training_reminder_sub_title" style="@style/SportProfileEditSubHeader" />
        <TextView android:id="@id/basics_view_edit_reminder_value" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/SportProfileEditTextEdit" />
        <fi.polar.polarflow.view.SegmentedSelector android:id="@id/basics_reminder_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sport_profile_edit_padding" android:layout_marginRight="@dimen/sport_profile_edit_padding" android:layout_marginBottom="@dimen/sport_profile_edit_padding_medium" />
        <TextView android:id="@id/basics_view_remind_message_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sport_profile_edit_training_reminder_message_sub_title" style="@style/SportProfileEditSubHeader" />
        <TextView android:id="@id/basics_view_edit_remind_message" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/sport_profile_edit_training_reminder_message_hint" style="@style/SportProfileEditTextEdit" />
    </fi.polar.polarflow.activity.main.sportprofile.view.SwitchLayout>
    <TextView android:id="@id/basics_view_training_sounds_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sport_profile_edit_training_sounds_title" style="@style/SportProfileEditSubHeader" />
    <fi.polar.polarflow.view.DiscreteSeekBarLayout android:id="@id/basics_view_training_sounds_seek_bar" android:background="@color/white_bg" android:paddingLeft="@dimen/sport_profile_edit_padding" android:paddingRight="@dimen/sport_profile_edit_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" app:glyphColor="@color/text_gray" app:glyphEnd="@string/glyph_sound_on" app:glyphSize="@dimen/sport_profile_edit_sound_bar_glyph_size" app:glyphStart="@string/glyph_sound_off" />
</merge>