<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/settings_support_dialog_layout" android:background="@color/transparent_settings_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:background="@color/white_bg" android:paddingTop="@dimen/margin_double" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/settings_support_product_support" android:text="@string/settings_product_support" style="@style/SettingsSupportStyle" />
        <TextView android:id="@id/settings_support_get_started_devices" android:text="@string/start_using_new_product" style="@style/SettingsSupportStyle" />
        <TextView android:id="@id/settings_support_how_to_sync" android:visibility="gone" android:text="@string/settings_how_to_sync" style="@style/SettingsSupportStyle" />
        <TextView android:id="@id/settings_support_show_Licences" android:text="@string/settings_support_show_licenses" style="@style/SettingsSupportStyle" />
        <TextView android:id="@id/settings_support_terms_and_cond" android:text="@string/eula" style="@style/SettingsSupportStyle" />
    </LinearLayout>
</FrameLayout>