<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/settings_handedness_title" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_handedness" style="@style/TextSettingsDark" />
    <TextView android:textStyle="normal" android:textColor="@color/red_text_selector" android:gravity="right" android:id="@id/settings_handedness" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_left_wrist" style="@style/TextSettingsWhite" />
    <TextView android:id="@id/settings_device_language_title" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/device_registration_device_language" style="@style/TextSettingsDark" />
    <TextView android:textStyle="normal" android:textColor="@color/red_text_selector" android:gravity="right" android:id="@id/settings_device_language_value" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/TextSettingsWhite" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_device_id" style="@style/TextSettingsDark" />
    <TextView android:textStyle="normal" android:textColor="@color/red_text_selector" android:gravity="right" android:id="@id/settings_device_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="ID" style="@style/TextSettingsWhite" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_firmware_version" style="@style/TextSettingsDark" />
    <TextView android:textStyle="normal" android:textColor="@color/red_text_selector" android:gravity="right" android:id="@id/settings_firmware_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="version" style="@style/TextSettingsWhite" />
</LinearLayout>